@@ -102,6 +102,7 @@ Locks held: none
 Lock at 0x........ was first observed
    at 0x........: rwlock_init (annotate_rwlock.c:54)
    by 0x........: main (annotate_rwlock.c:161)
+ Address 0x........ is 0 bytes inside data symbol "s_rwlock"
 
 Possible data race during write of size 4 at 0x........ by thread #x
 Locks held: 1, at address 0x........
